Update as of Nov 7, 2024

--- a/html/pos_terminal-products.html
+++ b/html/pos_terminal-products.html
@@ -29,7 +29,7 @@
 
             <!-- Navigation Links -->
             <div class="nav-links mt-10">
-                <a href="/html/pos_terminal-services.html" data-title="POS_Terminal" class="sidebar-link custom-hover text-black block py-2 px-4 text-center mb-2">POS Terminal</a>
+                <a href="/html/pos_terminal-products.html" data-title="POS_Terminal" class="sidebar-link custom-hover text-black block py-2 px-4 text-center mb-2">POS Terminal</a>
                 <a href="/html/sales-report.html" data-title="Sales_Report" class="sidebar-link custom-hover text-black block py-2 px-4 text-center">Report</a>
             </div>
         </div>
@@ -73,10 +73,10 @@
     <!-- Action Buttons for Products, Services, and View Sales History -->
     <div class="action-buttons mt-4 flex">
         <a href="/html/pos_terminal-services.html">
-            <button class="action-button services" style="width: 120px; height: 35px; background-color: #B4EA89;">Services</button>
+            <button class="action-button services" style="width: 120px; height: 35px; background-color: #ffffff;">Services</button>
         </a>
         <a href="/html/pos_terminal-products.html">
-            <button class="action-button products" style="width: 120px; height: 35px; background-color: #ffffff;">Products</button>
+            <button class="action-button products" style="width: 120px; height: 35px; background-color: #B4EA89;">Products</button>
         </a>
         <a href="/html/view_sales_transaction.html">
             <button class="action-button view-sales-history" style="width: 170px; height: 40px; border-radius: 15px;">View Sales History</button>
@@ -87,89 +87,100 @@
     <!-- Services/Products Cards Container -->
     <div class="services-product-container mt-6 grid grid-cols-3 gap-3">
         <div class="service-product-card">
-            <img src="/graphics/icons/consultation.png" alt="Consultation Icon" class="service-product-icon">
-            <span class="service-product-label">Consultation</span>
-            <span class="product-service-id">ID: C10219</span>
+            <img src="/graphics/pictures/floof-pets-multivitamins.png" alt="Consultation Icon" class="service-product-icon">
+            <span class="service-product-label">Floof Pets Cat Multivitamins</span>
+            <span class="product-service-id">ID: CMV85106</span>
             <div class="price-stocks-container"> 
-                <span class="service-product-price">₱200.00</span>
-                <!-- <span class="item-stocks">37 Stocks</span> -->
+                <span class="service-product-price">₱40.00</span>
+                <span class="item-stocks">24 Stocks</span>
             </div>
             <img src="/graphics/pictures/tem-barcode.png" alt="Barcode" class="service-product-barcode">
         </div>
 
         <div class="service-product-card">
-            <img src="/graphics/icons/vaccine.png" alt="Consultation Icon" class="service-product-icon">
-            <span class="service-product-label">Vaccine</span>
-            <span class="product-service-id">ID: V19115</span>
+            <img src="/graphics/pictures/goodest-wet-cat-food.png" alt="Consultation Icon" class="service-product-icon">
+            <span class="service-product-label">Goodest Cat Tender Tuna Pate </span>
+            <span class="product-service-id">ID: PP05641</span>
             <div class="price-stocks-container"> 
-                <span class="service-product-price">₱200.00</span>
-                <!-- <span class="item-stocks">37 Stocks</span> -->
+                <span class="service-product-price">₱190.00</span>
+                <span class="item-stocks">63 Stocks</span>
             </div>
             <img src="/graphics/pictures/tem-barcode.png" alt="Barcode" class="service-product-barcode">
         </div>
 
         <div class="service-product-card">
-            <img src="/graphics/icons/deworming.png" alt="Consultation Icon" class="service-product-icon">
-            <span class="service-product-label">Deworming</span>
-            <span class="product-service-id">ID: D10154</span>
+            <img src="/graphics/pictures/papi-mvp.png" alt="Consultation Icon" class="service-product-icon">
+            <span class="service-product-label">Papi MVP</span>
+            <span class="product-service-id">ID: PP05641</span>
             <div class="price-stocks-container"> 
                 <span class="service-product-price">₱200.00</span>
-                <!-- <span class="item-stocks">37 Stocks</span> -->
+                <span class="item-stocks">20 Stocks</span>
             </div>
             <img src="/graphics/pictures/tem-barcode.png" alt="Barcode" class="service-product-barcode">
         </div>
 
         <div class="service-product-card">
-            <img src="/graphics/icons/grooming.png" alt="Consultation Icon" class="service-product-icon">
-            <span class="service-product-label">Grooming</span>
-            <span class="product-service-id">ID: G56091</span>
+            <img src="/graphics/pictures/Tolfenamic-Acid.png" alt="Consultation Icon" class="service-product-icon">
+            <span class="service-product-label">Tolfenamic Acid</span>
+            <span class="product-service-id">ID: TA1271</span>
             <div class="price-stocks-container"> 
-                <span class="service-product-price">₱200.00</span>
-                <!-- <span class="item-stocks">37 Stocks</span> -->
+                <span class="service-product-price">₱299.00</span>
+                <span class="item-stocks">26 Stocks</span>
             </div>
             <img src="/graphics/pictures/tem-barcode.png" alt="Barcode" class="service-product-barcode">
         </div>
 
         <div class="service-product-card">
-            <img src="/graphics/icons/ultrasound.png" alt="Consultation Icon" class="service-product-icon">
-            <span class="service-product-label">Ultrasound</span>
-            <span class="product-service-id">ID: U30181</span>
+            <img src="/graphics/pictures/Bengal-Pro-Immune-Cat-Treat.png" alt="Consultation Icon" class="service-product-icon">
+            <span class="service-product-label">Bengal Pro Immune Cat Treat</span>
+            <span class="product-service-id">ID: PP30181</span>
             <div class="price-stocks-container"> 
-                <span class="service-product-price">₱200.00</span>
-                <!-- <span class="item-stocks">37 Stocks</span> -->
+                <span class="service-product-price">₱359.00</span>
+                <span class="item-stocks">37 Stocks</span>
             </div>
             <img src="/graphics/pictures/tem-barcode.png" alt="Barcode" class="service-product-barcode">
         </div>
 
         <div class="service-product-card">
-            <img src="/graphics/icons/x-rays.png" alt="Consultation Icon" class="service-product-icon">
-            <span class="service-product-label">X-ray</span>
-            <span class="product-service-id">ID: X90084</span>
+            <img src="/graphics/pictures/Himalaya-Nefrotec-DS.png" alt="Consultation Icon" class="service-product-icon">
+            <span class="service-product-label">Himalaya Nefrotec DS</span>
+            <span class="product-service-id">ID: PB90084</span>
             <div class="price-stocks-container"> 
-                <span class="service-product-price">₱200.00</span>
-                <!-- <span class="item-stocks">37 Stocks</span> -->
+                <span class="service-product-price">₱225.00</span>
+                <span class="item-stocks">37 Stocks</span>
             </div>
             <img src="/graphics/pictures/tem-barcode.png" alt="Barcode" class="service-product-barcode">
         </div>
 
         <div class="service-product-card">
-            <img src="/graphics/icons/lab-blood-test.png" alt="Consultation Icon" class="service-product-icon">
-            <span class="service-product-label">Lab/Blood Chem</span>
-            <span class="product-service-id">ID: LBC22</span>
+            <img src="/graphics/pictures/Histamox-Syrup.png" alt="Consultation Icon" class="service-product-icon">
+            <span class="service-product-label">Histamox Syrup</span>
+            <span class="product-service-id">ID: VITA21</span>
             <div class="price-stocks-container"> 
-                <span class="service-product-price">₱200.00</span>
-                <!-- <span class="item-stocks">37 Stocks</span> -->
+                <span class="service-product-price">₱173.00</span>
+                <span class="item-stocks">37 Stocks</span>
             </div>
             <img src="/graphics/pictures/tem-barcode.png" alt="Barcode" class="service-product-barcode">
         </div>
 
         <div class="service-product-card">
-            <img src="/graphics/icons/surgery.png" alt="Consultation Icon" class="service-product-icon">
-            <span class="service-product-label">Surgery</span>
+            <img src="/graphics/pictures/Monodex-D-Glucose-Monohydrate.png" alt="Consultation Icon" class="service-product-icon">
+            <span class="service-product-label">Monodex D-Glucose Monohydrate</span>
             <span class="product-service-id">ID: S98511</span>
             <div class="price-stocks-container"> 
-                <span class="service-product-price">₱200.00</span>
-                <!-- <span class="item-stocks">37 Stocks</span> -->
+                <span class="service-product-price">₱95.00</span>
+                <span class="item-stocks">37 Stocks</span>
+            </div>
+            <img src="/graphics/pictures/tem-barcode.png" alt="Barcode" class="service-product-barcode">
+        </div>
+
+        <div class="service-product-card">
+            <img src="/graphics/pictures/Bromhexine-Pulmo-Best.png" alt="Consultation Icon" class="service-product-icon">
+            <span class="service-product-label">Bromhexine Pulmo Best</span>
+            <span class="product-service-id">ID: BH10577</span>
+            <div class="price-stocks-container"> 
+                <span class="service-product-price">₱173.00</span>
+                <span class="item-stocks">37 Stocks</span>
             </div>
             <img src="/graphics/pictures/tem-barcode.png" alt="Barcode" class="service-product-barcode">
         </div>
@@ -224,82 +235,83 @@
         </div>
         
 
-            <!-- FOR THE RECEIPT PART -->
-            <div id="service-cards-container" class="service-cards-container mt-4">
-                <!-- New Container for Cards -->
-                <div class="service-cards mt-1">
-                    <div class="card" data-price="200"> <!-- Deworming Card -->
-                        <div class="delete-icon">
-                            <img src="/graphics/icons/Trash.png" alt="Delete" />
-                        </div>
-                        <div class="card-image">
-                            <img src="/graphics/icons/deworming.png" alt="Barcode" />
-                        </div>
-                        <div class="type-of-purchase">Services</div>
-                        <div class="service-product-id">D10154</div>
-                        <div class="service-product-name">Deworming</div>
-                        <div class="product-description"></div>
+        <!-- FOR THE RECEIPT PART -->
+        <div id="service-cards-container" class="service-cards-container mt-4">
+            <!-- New Container for Cards -->
+            <div class="service-cards mt-1">
+                <div class="card" data-price="200"> <!-- Deworming Card -->
+                    <div class="delete-icon">
+                        <img src="/graphics/icons/Trash.png" alt="Delete" />
+                    </div>
+                    <div class="card-image">
+                        <img src="/graphics/icons/deworming.png" alt="Barcode" />
+                    </div>
+                    <div class="type-of-purchase">Services</div>
+                    <div class="service-product-id">D10154</div>
+                    <div class="service-product-name">Deworming</div>
+                    <div class="product-description"></div>
 
-                        <!-- Product/Service Amount Control -->
-                        <div class="product-service-amount">
-                            <div class="decrement-button">-</div>
-                            <div class="item-count">1</div>
-                            <div class="increment-button">+</div>
-                        </div>
-
-                        <!-- Price Display -->
-                        <div class="price">₱200.00</div>
+                    <!-- Product/Service Amount Control -->
+                    <div class="product-service-amount">
+                        <div class="decrement-button">-</div>
+                        <div class="item-count">1</div>
+                        <div class="increment-button">+</div>
                     </div>
 
-                    <div class="card" data-price="40"> <!-- Floof Pets Cat Multivitamins Card -->
-                        <div class="delete-icon">
-                            <img src="/graphics/icons/Trash.png" alt="Delete" />
-                        </div>
-                        <div class="card-image">
-                            <img src="/graphics/pictures/floof-pets-multivitamins.png" alt="Barcode" />
-                        </div>
-                        <div class="type-of-purchase">Products</div>
-                        <div class="service-product-id">CMV85106</div>
-                        <div class="service-product-name">Floof Pets Cat Multivitamins</div>
-                        <div class="product-description">8 in 1 Cat Multivitamins 210g</div>
+                    <!-- Price Display -->
+                    <div class="price">₱200.00</div>
+                </div>
 
-                        <!-- Product/Service Amount Control -->
-                        <div class="product-service-amount">
-                            <div class="decrement-button">-</div>
-                            <div class="item-count">1</div>
-                            <div class="increment-button">+</div>
-                        </div>
+                <div class="card" data-price="40"> <!-- Floof Pets Cat Multivitamins Card -->
+                    <div class="delete-icon">
+                        <img src="/graphics/icons/Trash.png" alt="Delete" />
+                    </div>
+                    <div class="card-image">
+                        <img src="/graphics/pictures/floof-pets-multivitamins.png" alt="Barcode" />
+                    </div>
+                    <div class="type-of-purchase">Products</div>
+                    <div class="service-product-id">CMV85106</div>
+                    <div class="service-product-name">Floof Pets Cat Multivitamins</div>
+                    <div class="product-description">8 in 1 Cat Multivitamins 210g</div>
 
-                        <!-- Price Display -->
-                        <div class="price">₱40.00</div>
+                    <!-- Product/Service Amount Control -->
+                    <div class="product-service-amount">
+                        <div class="decrement-button">-</div>
+                        <div class="item-count">1</div>
+                        <div class="increment-button">+</div>
                     </div>
 
-                    <div class="card" data-price="190"> <!-- Goodest Cat Tender Tuna Card -->
-                        <div class="delete-icon">
-                            <img src="/graphics/icons/Trash.png" alt="Delete" />
-                        </div>
-                        <div class="card-image">
-                            <img src="/graphics/pictures/goodest-wet-cat-food.png" alt="Barcode" />
-                        </div>
-                        <div class="type-of-purchase">Products</div>
-                        <div class="service-product-id">CT749120</div>
-                        <div class="service-product-name">Goodest Cat Tender Tuna Pate Cat Wet Food</div>
-                        <div class="product-description">Protein, Zinc, Vitamin E, DHA 85g</div>
+                    <!-- Price Display -->
+                    <div class="price">₱40.00</div>
+                </div>
 
-                        <!-- Product/Service Amount Control -->
-                        <div class="product-service-amount">
-                            <div class="decrement-button">-</div>
-                            <div class="item-count">1</div>
-                            <div class="increment-button">+</div>
-                        </div>
-
-                        <!-- Price Display -->
-                        <div class="price">₱190.00</div>
+                <div class="card" data-price="190"> <!-- Goodest Cat Tender Tuna Card -->
+                    <div class="delete-icon">
+                        <img src="/graphics/icons/Trash.png" alt="Delete" />
                     </div>
+                    <div class="card-image">
+                        <img src="/graphics/pictures/goodest-wet-cat-food.png" alt="Barcode" />
+                    </div>
+                    <div class="type-of-purchase">Products</div>
+                    <div class="service-product-id">CT749120</div>
+                    <div class="service-product-name">Goodest Cat Tender Tuna Pate Cat Wet Food</div>
+                    <div class="product-description">Protein, Zinc, Vitamin E, DHA 85g</div>
+
+                    <!-- Product/Service Amount Control -->
+                    <div class="product-service-amount">
+                        <div class="decrement-button">-</div>
+                        <div class="item-count">1</div>
+                        <div class="increment-button">+</div>
+                    </div>
+
+                    <!-- Price Display -->
+                    <div class="price">₱190.00</div>
                 </div>
             </div>
+        </div>
 
-        
+
+
         <!-- Cashier Details -->
         <div class="cashier-details mt-4">
             <div class="flex items-center mb-1">
